--- a/Cassandra_project/Project_1B_ Project_Template.ipynb
+++ b/Cassandra_project/Project_1B_ Project_Template.ipynb
@@ -448,6 +448,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6820"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(event_df.isna())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "editable": true
@@ -467,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
@@ -498,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
@@ -524,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -566,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -577,18 +599,18 @@
     "# Q1 Create Table query\n",
     "q1_create_query = \"\"\"\n",
     "CREATE TABLE IF NOT EXISTS q1eventtable (\n",
-    "sessionId bigint, \n",
-    "userId bigint, \n",
-    "itemInSession bigint, \n",
+    "sessionid int, \n",
+    "userid int, \n",
+    "iteminsession int, \n",
     "song text, \n",
     "artist text, \n",
     "length float, \n",
-    "firstName text, \n",
-    "lastName text, \n",
+    "firstname text, \n",
+    "lastname text, \n",
     "gender text,\n",
     "location text,\n",
     "level text,\n",
-    "PRIMARY KEY ((sessionID, itemInSession)));\n",
+    "PRIMARY KEY ((sessionid, iteminsession)));\n",
     "\"\"\"\n",
     "try:\n",
     "    session.execute(q1_create_query)\n",
@@ -598,29 +620,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error from server: code=2200 [Invalid query] message=\"Invalid STRING constant (88) for \"userid\" of type bigint\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q1_insert_query =\"\"\"INSERT INTO q1eventtable (\n",
-    "sessionId, \n",
-    "userId, \n",
-    "itemInSession, \n",
+    "sessionid, \n",
+    "userid, \n",
+    "iteminsession, \n",
     "song, \n",
     "artist, \n",
     "length, \n",
-    "firstName, \n",
-    "lastName, \n",
+    "firstname, \n",
+    "lastname, \n",
     "gender,\n",
     "location,\n",
     "level)VALUES(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s);\n",
@@ -632,34 +646,79 @@
     "        csvreader = csv.reader(f)\n",
     "        next(csvreader)\n",
     "        for line in csvreader:\n",
-    "            session.execute(q1_insert_query, (line[8], line[10], line[3], line[9], line[0], line[5], line[1], line[4], line[2], line[7], line[6]))\n",
+    "            session.execute(q1_insert_query, (int(line[8]), int(line[10]), int(line[3]), line[9], line[0], float(line[5]), line[1], line[4], line[2], line[7], line[6]))\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4 µs, sys: 0 ns, total: 4 µs\n",
+      "Wall time: 8.34 µs\n",
+      "Row(artist='Faithless', song='Music Matters (Mark Knight Dub)', length=495.30731201171875)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time\n",
+    "\n",
+    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
+    "## sessionId = 338, and itemInSession = 4\n",
+    "\n",
+    "q1_result_query = \"SELECT artist, song, length FROM q1eventtable WHERE sessionid = 338 AND iteminsession = 4;\"\n",
+    "try:\n",
+    "    rows = session.execute(q1_result_query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
+    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
+    "## for userid = 10, sessionid = 182\n",
     "# Q2 Create Table query\n",
     "q2_create_query = \"\"\"\n",
     "CREATE TABLE IF NOT EXISTS q2eventtable (\n",
-    "sessionId int, \n",
-    "userId int, \n",
-    "itemInSession int, \n",
+    "sessionid int, \n",
+    "userid int, \n",
+    "iteminsession int, \n",
     "song text, \n",
     "artist text, \n",
     "length float, \n",
-    "firstName text, \n",
-    "lastName text, \n",
+    "firstname text, \n",
+    "lastname text, \n",
     "gender text,\n",
     "location text,\n",
     "level text,\n",
-    "PRIMARY KEY ((userId,sessionId), itemInSession));\n",
+    "PRIMARY KEY ((userId, sessionid), iteminsession))\n",
+    "WITH CLUSTERING ORDER BY (iteminsession ASC);\n",
     "\"\"\"\n",
     "try:\n",
     "    session.execute(q2_create_query)\n",
@@ -669,12 +728,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
+    "q2_insert_query =\"\"\"INSERT INTO q2eventtable (\n",
+    "sessionid, \n",
+    "userid, \n",
+    "iteminsession, \n",
+    "song, \n",
+    "artist, \n",
+    "length, \n",
+    "firstname, \n",
+    "lastname, \n",
+    "gender,\n",
+    "location,\n",
+    "level)VALUES(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s);\n",
+    "\"\"\"\n",
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "try:\n",
+    "    with open(file, encoding = 'utf8') as f:\n",
+    "        csvreader = csv.reader(f)\n",
+    "        next(csvreader)\n",
+    "        for line in csvreader:\n",
+    "            session.execute(q2_insert_query, (int(line[8]), int(line[10]), int(line[3]), line[9], line[0], float(line[5]), line[1], line[4], line[2], line[7], line[6]))\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 7.87 µs\n",
+      "Row(artist='Down To The Bone', song=\"Keep On Keepin' On\", firstname='Sylvie', lastname='Cruz')\n",
+      "Row(artist='Three Drives', song='Greece 2000', firstname='Sylvie', lastname='Cruz')\n",
+      "Row(artist='Sebastien Tellier', song='Kilometer', firstname='Sylvie', lastname='Cruz')\n",
+      "Row(artist='Lonnie Gordon', song='Catch You Baby (Steve Pitron & Max Sanna Radio Edit)', firstname='Sylvie', lastname='Cruz')\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time\n",
+    "\n",
+    "q2_result_query = \"SELECT artist, song, firstname, lastname FROM q2eventtable WHERE userid = 10 AND sessionid = 182;\"\n",
+    "try:\n",
+    "    rows = session.execute(q2_result_query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "# Q3 Create Table query\n",
     "q3_create_query = \"\"\"\n",
     "CREATE TABLE IF NOT EXISTS q3eventtable (\n",
@@ -700,135 +826,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "query = \"INSERT INTO music_library (year, artist_name, album_name, city)\"\n",
-    "query = query + \" VALUES (%s, %s, %s, %s)\"\n",
+    "q3_insert_query =\"\"\"INSERT INTO q3eventtable (\n",
+    "sessionid, \n",
+    "userid, \n",
+    "iteminsession, \n",
+    "song, \n",
+    "artist, \n",
+    "length, \n",
+    "firstname, \n",
+    "lastname, \n",
+    "gender,\n",
+    "location,\n",
+    "level)VALUES(%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s);\n",
+    "\"\"\"\n",
+    "file = 'event_datafile_new.csv'\n",
     "\n",
     "try:\n",
-    "    session.execute(query, (1970, \"The Beatles\", \"Let it Be\", \"Liverpool\"))\n",
+    "    with open(file, encoding = 'utf8') as f:\n",
+    "        csvreader = csv.reader(f)\n",
+    "        next(csvreader)\n",
+    "        for line in csvreader:\n",
+    "            session.execute(q3_insert_query, (int(line[8]), int(line[10]), int(line[3]), line[9], line[0], float(line[5]), line[1], line[4], line[2], line[7], line[6]))\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 6.91 µs\n",
+      "Row(firstname='Jacqueline', lastname='Lynch')\n",
+      "Row(firstname='Tegan', lastname='Levine')\n",
+      "Row(firstname='Sara', lastname='Johnson')\n"
+     ]
+    }
+   ],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
+    "%time\n",
     "\n",
-    "\n",
-    "                    "
+    "q3_result_query = \"SELECT firstname, lastname FROM q3eventtable WHERE song = 'All Hands Against His Own';\"\n",
+    "try:\n",
+    "    rows = session.execute(q3_result_query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(row)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
-    "file = 'event_datafile_new.csv'\n",
-    "\n",
-    "with open(file, encoding = 'utf8') as f:\n",
-    "    csvreader = csv.reader(f)\n",
-    "    next(csvreader) # skip header\n",
-    "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"<ENTER INSERT STATEMENT HERE>\"\n",
-    "        query = query + \"<ASSIGN VALUES HERE>\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[#], line[#]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
-    "\n",
-    "\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n",
-    "                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -841,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "editable": true
    },
@@ -852,13 +911,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "editable": true
    },
    "outputs": [],
    "source": [
-    "query = \"drop table eventdata\"\n",
+    "query = \"drop table q1eventtable\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "query = \"drop table q2eventtable\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "query = \"drop table q3eventtable\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -876,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "editable": true
    },
