--- a/Cassandra_project/Project_1B_ Project_Template.ipynb
+++ b/Cassandra_project/Project_1B_ Project_Template.ipynb
@@ -15,15 +15,6 @@
     "editable": true
    },
    "source": [
-    "## PLEASE RUN THE FOLLOWING CODE FOR PRE-PROCESSING THE FILES"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
     "#### Import Python packages "
    ]
   },
@@ -71,10 +62,10 @@
     }
    ],
    "source": [
-    "# checking your current working directory\n",
+    "# checking current working directory\n",
     "print(os.getcwd())\n",
     "\n",
-    "# Get your current folder and subfolder event data\n",
+    "# Get current folder and subfolder event data\n",
     "filepath = os.getcwd() + '/event_data'\n",
     "\n",
     "# Create a for loop to create a list of files and collect each filepath\n",
@@ -162,7 +153,7 @@
     }
    ],
    "source": [
-    "# check the number of rows in your csv file\n",
+    "# check the number of rows in csv file\n",
     "with open('event_datafile_new.csv', 'r', encoding = 'utf8') as f:\n",
     "    print(sum(1 for line in f))"
    ]
@@ -173,9 +164,9 @@
     "editable": true
    },
    "source": [
-    "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
+    "# Part II. Loading data into and querying it on Apache Cassandra \n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "## We will work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -191,6 +182,15 @@
     "The image below is a screenshot of what the denormalized data should appear like in the <font color=red>**event_datafile_new.csv**</font> after the code above is run:<br>\n",
     "\n",
     "<img src=\"images/image_event_datafile_new.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Profiling the data using pandas to determine which columns might be best suited for partition and clustering columns."
    ]
   },
   {
@@ -475,7 +475,7 @@
     "editable": true
    },
    "source": [
-    "## Begin writing your Apache Cassandra code in the cells below"
+    "## Setting up Connection to Cluster and setting a 'schema' - Keyspace - to load tables into. "
    ]
   },
   {
@@ -564,26 +564,15 @@
     "editable": true
    },
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "## Create queries to ask the following three questions of the data\n",
+    "## Queries to create tables, and load data into  so that we can determine answers for the following \n",
     "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "#### 1. Artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
     "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "#### 2. Name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "    \n",
     "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "#### 3. Every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
@@ -594,11 +583,10 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
-    "# Q1 Create Table query\n",
+    "# Question 1: Create Table\n",
+    "\n",
     "q1_create_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS q1eventtable (\n",
+    "CREATE TABLE IF NOT EXISTS song_artist_by_session (\n",
     "sessionid int, \n",
     "userid int, \n",
     "iteminsession int, \n",
@@ -626,7 +614,9 @@
    },
    "outputs": [],
    "source": [
-    "q1_insert_query =\"\"\"INSERT INTO q1eventtable (\n",
+    "# Question 1: Load data into the table\n",
+    "\n",
+    "q1_insert_query =\"\"\"INSERT INTO song_artist_by_session (\n",
     "sessionid, \n",
     "userid, \n",
     "iteminsession, \n",
@@ -662,19 +652,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 0 ns, total: 4 µs\n",
-      "Wall time: 8.34 µs\n",
       "Row(artist='Faithless', song='Music Matters (Mark Knight Dub)', length=495.30731201171875)\n"
      ]
     }
    ],
    "source": [
-    "%time\n",
+    "# Question 1: Run a query for results\n",
     "\n",
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
-    "\n",
-    "q1_result_query = \"SELECT artist, song, length FROM q1eventtable WHERE sessionid = 338 AND iteminsession = 4;\"\n",
+    "q1_result_query = \"SELECT artist, song, length FROM song_artist_by_session WHERE sessionid = 338 AND iteminsession = 4;\"\n",
     "try:\n",
     "    rows = session.execute(q1_result_query)\n",
     "except Exception as e:\n",
@@ -685,15 +670,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -701,11 +677,10 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
-    "# Q2 Create Table query\n",
+    "# Question 2: Create Table\n",
+    "\n",
     "q2_create_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS q2eventtable (\n",
+    "CREATE TABLE IF NOT EXISTS song_playlist_session (\n",
     "sessionid int, \n",
     "userid int, \n",
     "iteminsession int, \n",
@@ -734,7 +709,9 @@
    },
    "outputs": [],
    "source": [
-    "q2_insert_query =\"\"\"INSERT INTO q2eventtable (\n",
+    "# Question 2: Load data into table\n",
+    "\n",
+    "q2_insert_query =\"\"\"INSERT INTO song_playlist_session (\n",
     "sessionid, \n",
     "userid, \n",
     "iteminsession, \n",
@@ -770,8 +747,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 7.87 µs\n",
       "Row(artist='Down To The Bone', song=\"Keep On Keepin' On\", firstname='Sylvie', lastname='Cruz')\n",
       "Row(artist='Three Drives', song='Greece 2000', firstname='Sylvie', lastname='Cruz')\n",
       "Row(artist='Sebastien Tellier', song='Kilometer', firstname='Sylvie', lastname='Cruz')\n",
@@ -780,9 +755,9 @@
     }
    ],
    "source": [
-    "%time\n",
+    "#Question 2: Run a query for results\n",
     "\n",
-    "q2_result_query = \"SELECT artist, song, firstname, lastname FROM q2eventtable WHERE userid = 10 AND sessionid = 182;\"\n",
+    "q2_result_query = \"SELECT artist, song, firstname, lastname FROM song_playlist_session WHERE userid = 10 AND sessionid = 182;\"\n",
     "try:\n",
     "    rows = session.execute(q2_result_query)\n",
     "except Exception as e:\n",
@@ -800,10 +775,10 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "# Q3 Create Table query\n",
+    "# Question 3: Create a table\n",
+    "\n",
     "q3_create_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS q3eventtable (\n",
+    "CREATE TABLE IF NOT EXISTS song_listeners (\n",
     "sessionId int, \n",
     "userId int, \n",
     "itemInSession int, \n",
@@ -832,7 +807,9 @@
    },
    "outputs": [],
    "source": [
-    "q3_insert_query =\"\"\"INSERT INTO q3eventtable (\n",
+    "#Question 3: Load data into the table\n",
+    "\n",
+    "q3_insert_query =\"\"\"INSERT INTO song_listeners (\n",
     "sessionid, \n",
     "userid, \n",
     "iteminsession, \n",
@@ -868,8 +845,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 6.91 µs\n",
       "Row(firstname='Jacqueline', lastname='Lynch')\n",
       "Row(firstname='Tegan', lastname='Levine')\n",
       "Row(firstname='Sara', lastname='Johnson')\n"
@@ -877,9 +852,9 @@
     }
    ],
    "source": [
-    "%time\n",
+    "# Question 3: Run a query for results\n",
     "\n",
-    "q3_result_query = \"SELECT firstname, lastname FROM q3eventtable WHERE song = 'All Hands Against His Own';\"\n",
+    "q3_result_query = \"SELECT firstname, lastname FROM song_listeners WHERE song = 'All Hands Against His Own';\"\n",
     "try:\n",
     "    rows = session.execute(q3_result_query)\n",
     "except Exception as e:\n",
@@ -906,7 +881,11 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
+    "query = \"drop table song_artist_by_session\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -917,7 +896,7 @@
    },
    "outputs": [],
    "source": [
-    "query = \"drop table q1eventtable\"\n",
+    "query = \"drop table song_playlist_session\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -932,22 +911,7 @@
    },
    "outputs": [],
    "source": [
-    "query = \"drop table q2eventtable\"\n",
-    "try:\n",
-    "    rows = session.execute(query)\n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "query = \"drop table q3eventtable\"\n",
+    "query = \"drop table song_listeners\"\n",
     "try:\n",
     "    rows = session.execute(query)\n",
     "except Exception as e:\n",
@@ -965,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "editable": true
    },
@@ -974,15 +938,6 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
